WIP: Local changes before pulling from remote